// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snippet import snippets when the file has a space in the file path 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;

exports[`snippet import snippet 1`] = `
<pre><code class="language-js">export default function () {
  // ..
}
</code></pre>
`;

exports[`snippet import snippet with region and highlight 1`] = `
<pre><code class="language-js{1,3}">function foo () {
  // ..
}</code></pre>
`;

exports[`snippet import snippet with highlight multiple lines 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;

exports[`snippet import snippet with highlight single line 1`] = `
<div class="highlight-lines">
  <div class="highlighted">&nbsp;</div><br>
  <div class="highlighted">&nbsp;</div><br>
</div>export default function () {
// ..
}
`;

exports[`snippet import snippet with indented region 1`] = `
<pre><code class="language-html">&lt;section&gt;
  &lt;h1&gt;Hello World&lt;/h1&gt;
&lt;/section&gt;
&lt;div&gt;Lorem Ipsum&lt;/div&gt;</code></pre>
`;

exports[`snippet import snippet with region 1`] = `
<pre><code class="language-js">function foo () {
  // ..
}</code></pre>
`;
